--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,16 @@ aside{
 	width: 400px;
 	height: 20px;
   padding-bottom: 70px;}
+  @media screen and (max-width: 400px) {
+  aside{
+  	overflow:hidden;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-left: -20px;
+  	width: 400px;
+  	height: 20px;
+    padding-bottom: 70px;}}
 nav a{
 	font-size: 25px;
 	text-decoration:none;
@@ -185,6 +195,32 @@ nav li a:active{
   margin-right: auto;
 	font-size: 40px;
 	font-family: 'Poiret One', cursive;}
+@media screen and (max-width: 480px) {
+  #texte{
+  	width: 60%;
+  	height:40px;
+    color: #FFFFFF;
+  	overflow:hidden;
+    padding-bottom: 10px;
+    text-align: center;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+  	font-size: 40px;
+  	font-family: 'Poiret One', cursive;}}
+    @media screen and (max-width: 450px) {
+      #texte{
+      	width: 70%;
+      	height:40px;
+        color: #FFFFFF;
+      	overflow:hidden;
+        padding-bottom: 10px;
+        text-align: center;
+        margin-top: 100px;
+        margin-left: auto;
+        margin-right: auto;
+      	font-size: 40px;
+      	font-family: 'Poiret One', cursive;}}
 #rdesigns{
   margin: auto;
 	width:100%;
@@ -332,27 +368,40 @@ nav li a:active{
   width: 100%;
   height: 100%;}
 .container{
-  width: 1300px;
+  width: 2400px;
   height: auto;
   margin: 0 auto -100px auto;
   padding-bottom: 100px;
   padding-top: 10px;}
-@media screen and (max-width: 1300px) {
-  .container {width: 840px;}}
-@media screen and (max-width: 840px) {
-  .container {width: 560px;}}
+@media screen and (max-width: 2000px) {
+  .container {width: 1800px;}}
+@media screen and (max-width: 1700px) {
+  .container {width: 1500px;}}
+@media screen and (max-width: 1400px) {
+  .container {width: 1200px;}}
+@media screen and (max-width: 1100px) {
+  .container {width: 900px;}}
+@media screen and (max-width: 800px) {
+  .container {width: 600px;}}
+@media screen and (max-width: 600px) {
+  .container ul{margin-left: 10px;}}
+@media screen and (max-width: 500px) {
+  .container ul{margin-left: -20px;}}
+@media screen and (max-width: 450px) {
+  .container ul{margin-left: -60px;}}
+@media screen and (max-width: 400px) {
+  .container ul{margin-left: -70px;}}
 .container ul{
+  padding-left: 100px;
   list-style-type: none;}
 .container li{
-  float: left;
   position: relative;
   width: 280px;
   height: 190px;
   overflow: hidden;}
 .container li:hover{
   cursor: pointer;}
-@media screen and (max-width: 560px) {
-  .container {width: 280px;}}
+
 .container li p{
   color: transparent;
   background: transparent;
