--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ aside{
 	width: 400px;
 	height: 20px;
   padding-bottom: 70px;}
-  @media screen and (max-width: 400px) {
+@media screen and (max-width: 400px) {
   aside{
   	overflow:hidden;
     text-align: center;
@@ -57,6 +57,16 @@ aside{
   	width: 400px;
   	height: 20px;
     padding-bottom: 70px;}}
+    @media screen and (max-width: 360px) {
+      aside{
+      	overflow:hidden;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        margin-left: -30px;
+      	width: 400px;
+      	height: 20px;
+        padding-bottom: 70px;}}
 nav a{
 	font-size: 25px;
 	text-decoration:none;
