--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ aside{
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 25px;
+  padding-left: 10px;
 	width: 360px;
 	height: 20px;
   padding-bottom: 70px;}
@@ -63,7 +63,7 @@ aside{
         text-align: center;
         margin-left: auto;
         margin-right: auto;
-        margin-left: -25px;
+        margin-left: -15px;
       	width: 360px;
       	height: 20px;
         padding-bottom: 70px;}}
@@ -400,6 +400,8 @@ nav li a:active{
   .container ul{margin-left: -60px;}}
 @media screen and (max-width: 400px) {
   .container ul{margin-left: -70px;}}
+@media screen and (max-width: 360px) {
+  .container ul{margin-left: -95px;}}
 .container ul{
   padding-left: 100px;
   list-style-type: none;}
@@ -410,7 +412,6 @@ nav li a:active{
   overflow: hidden;}
 .container li:hover{
   cursor: pointer;}
-
 .container li p{
   color: transparent;
   background: transparent;
@@ -517,6 +518,6 @@ header{
 #logo img{
   left: 50px;
   width:280px;
-  height: 140px;
+  height: 130px;
   position: absolute;}
 }
